<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stock_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Cell">

        <LinearLayout
            android:layout_marginTop="@dimen/secondary_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_margin"
            android:layout_marginRight="@dimen/main_margin"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/main_text_size"
                android:text="@string/accept_call_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/accept_button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/main_margin"
            android:layout_marginRight="@dimen/main_margin"
            android:layout_marginTop="@dimen/secondary_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/main_text_size"
                android:text="@string/reject_call_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/reject_button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/main_margin"
            android:layout_marginRight="@dimen/main_margin"
            android:layout_marginTop="@dimen/secondary_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/main_text_size"
                android:text="@string/callback_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/callback_button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/main_margin"
            android:layout_marginRight="@dimen/main_margin"
            android:layout_marginTop="@dimen/secondary_margin"
            android:layout_marginBottom="@dimen/secondary_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/main_text_size"
                android:text="@string/close_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/close_button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>