<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_auto_call_back_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"


        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:alpha="0.87"
            android:fontFamily="sans-serif"
            android:text="@string/is_activated"
            android:textSize="16sp"

            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/auto_call_back_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58.3dp"
        >

        <RelativeLayout
            android:id="@+id/auto_call_back_block_pause"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:background="#f2f3f4"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Паузы"
                android:textSize="16dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lay_time_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/auto_call_back_block_pause"
            android:layout_marginTop="27.3dp">

            <TextView
                android:id="@+id/text_reject_time"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/reject_time"
                android:textSize="16dp"

                />

            <EditText

                android:layout_width="43.3dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/auto_call_back_block_pause"
            android:layout_marginTop="78.3dp">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/callback_time"
                android:textSize="16dp"
                />

            <EditText
                android:layout_width="43.3dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>